feat: change user

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,22 @@
-<app-user></app-user>
+<div class="app p-4 container-fluid">
+  <div class="row">
+    <div class="col col-md-4 offset-md-4">
+      <div class="text-center">
+        <app-user [user]="user" (changeUser)="getUser()" *ngIf="user; else loadingBlock"></app-user>
+
+        <ng-template #loadingBlock>
+          <div class="text-center">
+            <div 
+              class="spinner-border spinner-grow-mg text-white" 
+              role="status"
+            >
+              <div class="text-white">
+                loading....
+              </div>
+            </div>
+          </div>
+        </ng-template>
+      </div>
+    </div>
+  </div>
+</div>
